fix alignment issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,17 @@ body {
     text-align: center;
 }
 
+.schedule_content {
+    background-color: #f5f0e6;
+    font-size: x-large;
+    padding-left: 48px;
+    padding-right: 48px;
+}
+
+.not_schedule {
+    text-align: center;
+}
+
 .schedule {
     text-align: left;
 }
